kubernetes/6.3.1_stateless_backend_and_basic_auth_in_fastapi/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: ghcr.io/jeremiedecock/hello-fastapi:1.0
          name: hello
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-secret
