kubernetes/6.3.1_stateless_backend_and_basic_auth_in_fastapi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
